updated resume to reflect DigitalOcean work and added a Dockerfile so I can build this outside my laptop

--- a/resume.tex
+++ b/resume.tex
@@ -19,7 +19,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%   PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
 \documentclass[10pt]{article} % Font size - 10pt, 11pt or 12pt
@@ -40,10 +40,10 @@
 
 % Colors for links, text and headings
 \usepackage{hyperref}
-\definecolor{linkcolor}{HTML}{506266} % Blue-gray color for links
-\definecolor{shade}{HTML}{F5DD9D} % Peach color for the contact information box
+\definecolor{linkcolor}{HTML}{0F52BA} % Blue-gray color for links
+\definecolor{shade}{HTML}{FFDAb9} % Peach color for the contact information box
 \definecolor{text1}{HTML}{2b2b2b} % Main document font color, off-black
-\definecolor{headings}{HTML}{701112} % Dark red color for headings
+\definecolor{headings}{HTML}{002366} % Dark red color for headings
 % Other color palettes: shade=B9D7D9 and linkcolor=A40000; shade=D4D7FE and linkcolor=FF0080
 
 \hypersetup{colorlinks,breaklinks, urlcolor=linkcolor, linkcolor=linkcolor} % Set up links and colors
@@ -70,54 +70,54 @@
 \color{text1} % Sets the default text color for the whole document to the color defined as 'text1'
 
 %----------------------------------------------------------------------------------------
-%	TITLE
+%   TITLE
 %----------------------------------------------------------------------------------------
 
 \par{\centering{\sffamily\Huge Mason Egger}\\ % Your name
-{\color{headings}\fontspec[Variant = 2]{Times New Roman} Platform Engineer, Educator}\\[15pt]\par} 
-	
+{\color{headings}\fontspec[Variant = 2]{Times New Roman} Devoloper Advocate, Community Leader, Programmer}\\[15pt]\par} 
+    
 %----------------------------------------------------------------------------------------
 
 \begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
 \vspace{0pt} % Trick for alignment
-	
+    
 %----------------------------------------------------------------------------------------
-%	OBJECTIVE
+%   OBJECTIVE
 %----------------------------------------------------------------------------------------
 \section{About Me}
-Experienced engineer having worked as both a software and systems engineer with a penchant for security, distributed systems, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source. Passionate educator currently volunteering teaching through the Microsoft TEALS program. \\
+Community leader and advocate who loves teaching and helping people grow. Previously worked in various engineering roles, both software and systems, with a penchant for security, automation, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open-source and building community.
 
 %----------------------------------------------------------------------------------------
-%       WORK EXPERIENCE
+%       Current WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
 
-\section{Work Experience} 
+\section{Current Work Experience} 
 
 %------------------------------------------------
-% WORK EXPERIENCE 4
+% WORK EXPERIENCE 5
 %------------------------------------------------
 
-{\raggedright\large Sr. Software Engineer\\
-\textit{March 2018 - Present}\\
-\textit{Vrbo, Austin, TX} \\
-\raggedright\small \textit{Sr. Site Reliability Engineer}\\[5pt]}
+{\raggedright\large Sr. Developer Advocate\\
+\small \textit{October 2019 - Present}\\
+\small \textit{DigitalOcean, Remote} \\
+\raggedright\small \textit{Developer Advocate}\\[5pt]}
 
-\normalsize{Currently responsible for the Ministry of Truth, Vrbo's highly available cloud platform as a service used for all application deployments and container orchestration across Vrbo's hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. Led the effort to make Vrbo a polyglot software shop by implementing first class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. Previously responsible for Vrbo's internal hybrid cloud Platform as a Service infrastructure, containing more than a thousand nodes and tens of thousands of containers.  }\\
+\normalsize{
+    Responsible for fostering the growth, education, and satisfaction of the DigitalOcean developer community. Lead advocate for the Infrastructure as a Service-based products DigitalOcean, aiding in multiple Go-To-Market activities for new products. Involved in the planning and execution of DigitalOcean community events such as Deploy, Tech Talks, and Hacktoberfest. Lead the creation of an external, open-source focused Advisory Board to help guide the direction of Hacktoberfest. Implemented a company-wide educational series on all DigitalOcean products that is now a part of all new-hire onboarding. Organized, planned, and executed strategy as Program lead to expand and activate DigitalOcean's community content creators, the Navigators. \\
+    
+    Focus on the 4Cs of Advocacy:
 
-%------------------------------------------------
-% WORK EXPERIENCE 2
-%------------------------------------------------
-
-{
-\raggedright\large  Software Engineer II\\
-\textit{December 2015 - March 2018}\\
-\textit{Forcepoint, Austin, TX}\\
-\raggedright\small \textit{Software Engineer I}\\
-\raggedright\small \textit{Associate Software Engineer}\\
-[5pt]
+    \begin{itemize}
+        \item \textit{Code} - Contributed to relevant open-source projects such as the DigitalOcean Terraform provider and DigitalOcean classroom. Created high-quality polyglot code samples to demonstrate DigitalOcean products and cloud architecture.
+    
+        \item \textit{Content} - Produced high-quality, high-performing educational resources about DigitalOcean products and open-source technologies in the form of tutorials, blogs, and videos.
+    
+        \item \textit{Community} - Engaged with developer communities at physical and virtual events. Presented workshops, webinars, and talks at universities, meetups, and conferences, both in-person and virtually. Active in social channels where developers congregate.
+        
+        \item \textit{Consulting} - Continuously aided non-technical employees at DigitalOcean in their programs, ensuring the consistency and accuracy of our developer voice. Brought relevant feedback from the community to multiple teams, including sales, marketing, and product.
+    \end{itemize}
 }
 
-\normalsize{Designed and implemented a Cloud based platform for CI/CD and application deployment for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the code base. Promoted multiple times within same team.}\\
 
 
 \end{minipage} % End the left-hand side of the page
@@ -126,12 +126,12 @@ Experienced engineer having worked as both a software and systems engineer with 
 \vspace{0pt} % Trick for alignment
 
 %----------------------------------------------------------------------------------------
-%	COLORED BOX
+%   COLORED BOX
 %----------------------------------------------------------------------------------------
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 11915 Stonehollow Dr. \#1637 Austin, TX \\ % Address
+\raisebox{-4pt}{\textifsymbol{18}} & Austin, TX area \\ % Address
 \raisebox{-3pt}{\Mobilefone} & (512)387-0297 \\ % Phone number
 \raisebox{-1pt}{\Letter} & \href{mailto:mason@masonegger.com}{mason@masonegger.com} \\ % Email address
 \Keyboard & \href{https://mason.dev}{https://mason.dev} \\ % Website
@@ -140,63 +140,88 @@ Experienced engineer having worked as both a software and systems engineer with 
 }\\
 
 %----------------------------------------------------------------------------------------
-%	COMPUTER SKILLS
+%   COMPUTER SKILLS
 %----------------------------------------------------------------------------------------
 
 \section{Skills} 
 
 \begin{tabular}{rl}
+Developer Relations
+& Public Speaking, Technical Writing, \\
+& Evangelism, Developer Education, \\
+& Program Management \\
 Languages
-& \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}\\
-Operating Systems
-& \textsc{Linux (All flavors)},  \textsc{FreeBSD}, \textsc{OpenBSD} \\
-Systems
-& \textsc{Docker}, \textsc{Artifactory},  \textsc{Terraform},\\
-&  \textsc{Consul}, \textsc{Vault}, \textsc{Nomad},\\
-& \textsc{Packer}, \textsc{Vagrant}, \textsc{Networking}, \textsc{Jenkins} \\
-Cloud
-& \textsc{AWS}, \textsc{Digital Ocean}\\
-Misc.
-& \textsc{Computer Science Education}\\
-\\
+& Python, Golang, Java \\
+Frameworks
+& Django, Flask, Hugo \\
+DevOps
+& Terraform, Docker, Ansible,\\
+& Packer, CI/CD, Networking, \\
+& Cloud Architecture, Linux\\
 \end{tabular}
 
+
 %----------------------------------------------------------------------------------------
-%	Speaking
+% Community & Open Source
+%----------------------------------------------------------------------------------------
+\section{Community \& Open Source}
+
+\begin{tabular}{ll}
+\textbf{\href{https://hacktoberfest.digitalocean.com/}{Hacktoberfest Organizer}}\\
+\tab Oraganizer for the largest Open Source program in the  \\
+\tab world. Lead the creation of the Advisory Council, and  \\
+\tab hosted official events \\
+
+\textbf{\href{https://pytexas.org}{PyTexas}}\\
+\tab Organizer, Conference Chair for the oldest regional   \\
+\tab Python conference and largest Python event in Texas. \\
+
+\textbf{\href{https://www.digitalocean.com/community/users/masonegger?subtype=tutorial}{DigitalOcean Community Author}}\\
+\tab Authored multiple high performing tutorials on the  \\
+\tab famed DigitalOcean Community Tutorial site. \\
+
+\textbf{\href{https://www.digitalocean.com/community/pages/digitalocean-navigators}{DigitalOcean Navigator Program Lead}}\\
+\tab Program lead for DigitalOcean's most involved \\
+\tab community members. \\
+
+\textbf{\href{https://github.com/masonegger}{Open Source Contributor}}\\
+\tab Active Open Source contributor. \\
+
+\end{tabular}\\
+%----------------------------------------------------------------------------------------
+%   Speaking
 %----------------------------------------------------------------------------------------
 
 \section{Speaking} 
 
 \begin{tabular}{ll}
-\textbf{Building Docs Like Code:} \\
-\tab\textbf{Continuous Integration for Documentation}\\
-\textit{2019} - PyTexas, Texas Linux Fest, PyOhio, PyLatam\\
+
+\textbf{\href{https://www.digitalocean.com/community/pages/cloud-chats}{Cloud Chats}} \\
+\tab Lead host on a weekly web show discussing news, \\
+\tab community, and developer topics.\\
+
+\textbf{\href{https://www.digitalocean.com/community/users/masonegger?subtype=tech_talk}{DigitalOcean Tech Talks}} \\
+\tab Monthly live coding streams on DevOps, \\
+\tab programming, and Cloud Architecture.\\
+
+\textbf{\href{https://mason.dev/speaking}{Conference Speaker}} \\
+\tab Highly sought after speaker, presented talks across \\ 
+\tab multiple states, countries, and continents. \\
 \\
 
+A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.dev/speaking}\\
 
-\textbf{pfSense - A Beginner's Guide to a Sensible Firewall} \\
-\textit{2016} - Texas Linux Fest\\
-\\
 \end{tabular}\\
 
-%----------------------------------------------------------------------------------------
-% PROJECTS
-%----------------------------------------------------------------------------------------
-\section{Open Source Projects}
 
-\begin{tabular}{rl}
-& UnlockedEdu - Open Source Educational Resources\\
-& \quad \href{https://www.unlockededu.org}{https://www.unlockededu.org} \\
-\\
-\end{tabular}\\
 
 %----------------------------------------------------------------------------------------
-%	Volunteer
+%   Volunteer
 %----------------------------------------------------------------------------------------
 
 \section{Volunteer} 
 
-\begin{tabular}{ll}
+\begin{tabular}{ll}\
 \textbf{Microsoft TEALS}\\
 \tab\textit{2019-2020} - Classroom Enrichment Guest Lecturer\\
 \tab\textit{2018-2019} - Co-Teacher, AP Computer Science A\\
@@ -211,8 +236,52 @@ Misc.
 \end{tabular}\\
 
 
+
+    
+\end{minipage} % End right-hand side of the page
+\begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
+\vspace{0pt} % Trick for alignment
+\section{Prior Work Experience} 
+
 %----------------------------------------------------------------------------------------
-%	EDUCATION
+%   Previous Work Experience
+%----------------------------------------------------------------------------------------
+
+{\raggedright\large Sr. Software Engineer\\
+\small \textit{March 2018 - Present}\\
+\small \textit{Vrbo, Austin, TX} \\
+\raggedright\small \textit{Sr. Site Reliability Engineer}\\[5pt]}
+
+\normalsize{Responsible for Vrbo's highly available Platform as a Service used for all application deployments and container orchestration across Vrbo's 1000+ node hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. Led the effort to make Vrbo a polyglot software shop by implementing first-class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation. }\\
+
+{
+\raggedright\large  Software Engineer II\\
+\small \textit{December 2015 - March 2018}\\
+\small \textit{Forcepoint, Austin, TX}\\
+\raggedright\small \textit{Software Engineer I}\\
+\raggedright\small \textit{Associate Software Engineer}\\
+[5pt]
+}
+
+\normalsize{Designed and implemented a Cloud-based platform for CI/CD and application deployment for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the codebase. Promoted multiple times within same team.}\\
+
+%------------------------------------------------
+% WORK EXPERIENCE 1
+%------------------------------------------------
+{\raggedright\large Undergraduate Instructional Assistant\\
+\small \textit{June 2012 - December 2015} \\
+\small \textit{Department of Computer Science, Texas State University}\\[5pt]}
+
+\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers and created automated solutions for departmental tasks.}\\
+
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
+\vspace{0pt} % Trick for alignment
+
+
+%----------------------------------------------------------------------------------------
+%   EDUCATION
 %----------------------------------------------------------------------------------------
 
 \section{Education} 
@@ -226,7 +295,7 @@ Misc.
 & \textsc{Computer Science} \\ 
 & \textit{Texas State University}\\
 
-	 
+     
 %------------------------------------------------
 % EDUCATION 3
 %------------------------------------------------
@@ -237,43 +306,19 @@ Misc.
 
 \end{tabular}
 
-
-
-
-
-
-%----------------------------------------------------------------------------------------
-	
-\end{minipage} % End right-hand side of the page
-\begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
-\vspace{0pt} % Trick for alignment
-\section{Work Experience - Continued} 
-
-%----------------------------------------------------------------------------------------
-%	Dated Work Experience
 %----------------------------------------------------------------------------------------
 
-%------------------------------------------------
-% WORK EXPERIENCE 1
-%------------------------------------------------
-{\raggedright\large Undergraduate Instructional Assistant\\
-\textit{June 2012 - December 2015} \\
-\textit{Department of Computer Science, Texas State University}\\[5pt]}
-
-\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers and created automated solutions for departmental tasks.}\\
-
-\end{minipage}
-\hfill
-\begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
-\vspace{0pt} % Trick for alignment
-
 %----------------------------------------------------------------------------------------
-%	AWARDS
+%   AWARDS
 %----------------------------------------------------------------------------------------
 
 \section{Awards} 
 
 \begin{tabular}{rl}
+
+2021     & \textbf{Marketing STARfish Award}\\
+& \textit{DigitalOcean} \\\\
+
 2016     & \textbf{Silver Performance Award}\\
 & \textit{Forcepoint}\\ \\
 
@@ -287,14 +332,14 @@ Misc.
 
 
 %----------------------------------------------------------------------------------------
-%	Miscellaneous
+%   Miscellaneous
 %----------------------------------------------------------------------------------------
 
 \section{Miscellaneous} 
 
-\begin{tabular}{rl}
-& YouTube Host \href{https://www.youtube.com/masonegger}{Mason Egger}\\
-& Albums: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
+\begin{tabular}{ll}
+YouTube Host \href{https://www.youtube.com/masonegger}{Mason Egger}\\
+Albums: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
 \end{tabular}\\
 
 \end{minipage}
