--- a/resume.tex
+++ b/resume.tex
@@ -98,9 +98,9 @@ Community leader and advocate who loves teaching and helping people grow. Previo
 %------------------------------------------------
 
 {\raggedright\large Sr. Developer Advocate\\
-\small \textit{October 2019 - Present}\\
+\small \textit{June 2021 - Present}\\
 \small \textit{DigitalOcean, Remote} \\
-\raggedright\small \textit{Developer Advocate}\\[5pt]}
+\raggedright\small \textit{Developer Advocate: October 2019 - June 2021}\\[5pt]}
 
 \normalsize{
     Responsible for fostering the growth, education, and satisfaction of the DigitalOcean developer community. Lead advocate for the Infrastructure as a Service-based products DigitalOcean, aiding in multiple Go-To-Market activities for new products. Involved in the planning and execution of DigitalOcean community events such as Deploy, Tech Talks, and Hacktoberfest. Lead the creation of an external, open-source focused Advisory Board to help guide the direction of Hacktoberfest. Implemented a company-wide educational series on all DigitalOcean products that is now a part of all new-hire onboarding. Organized, planned, and executed strategy as Program lead to expand and activate DigitalOcean's community content creators, the Navigators. \\
@@ -248,18 +248,18 @@ A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.
 %----------------------------------------------------------------------------------------
 
 {\raggedright\large Sr. Software Engineer\\
-\small \textit{March 2018 - Present}\\
+\small \textit{Jul 2019 - Sep 2019}\\
 \small \textit{Vrbo, Austin, TX} \\
-\raggedright\small \textit{Sr. Site Reliability Engineer}\\[5pt]}
+\raggedright\small \textit{Sr. Site Reliability Engineer: Mar 2018 - Jul 2019}\\[5pt]}
 
 \normalsize{Responsible for Vrbo's highly available Platform as a Service used for all application deployments and container orchestration across Vrbo's 1000+ node hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. Led the effort to make Vrbo a polyglot software shop by implementing first-class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation. }\\
 
 {
 \raggedright\large  Software Engineer II\\
-\small \textit{December 2015 - March 2018}\\
+\small \textit{Oct 2017 - Mar 2018}\\
 \small \textit{Forcepoint, Austin, TX}\\
-\raggedright\small \textit{Software Engineer I}\\
-\raggedright\small \textit{Associate Software Engineer}\\
+\raggedright\small \textit{Software Engineer I: May 2017 - Oct 2017}\\
+\raggedright\small \textit{Associate Software Engineer: Dec 2015 - May 2017}\\
 [5pt]
 }
 
