Updating for Gretel

--- a/resume.tex
+++ b/resume.tex
@@ -94,27 +94,26 @@ Community leader and advocate who loves teaching and helping people grow. Previo
 \section{Current Work Experience} 
 
 %------------------------------------------------
-% WORK EXPERIENCE 5
+% Current Work Experience
 %------------------------------------------------
 
-{\raggedright\large Sr. Developer Advocate\\
-\small \textit{June 2021 - Present}\\
-\small \textit{DigitalOcean, Remote} \\
-\raggedright\small \textit{Developer Advocate: October 2019 - June 2021}\\[5pt]}
+{\raggedright\large Lead Developer Advocate\\
+\small \textit{April 2022 - Present}\\
+\small \textit{Gretel.ai, Remote} \\}
 
 \normalsize{
-    Responsible for fostering the growth, education, and satisfaction of the DigitalOcean developer community. Lead advocate for the Infrastructure as a Service-based products DigitalOcean, aiding in multiple Go-To-Market activities for new products. Involved in the planning and execution of DigitalOcean community events such as Deploy, Tech Talks, and Hacktoberfest. Lead the creation of an external, open-source focused Advisory Board to help guide the direction of Hacktoberfest. Implemented a company-wide educational series on all DigitalOcean products that is now a part of all new-hire onboarding. Organized, planned, and executed strategy as Program lead to expand and activate DigitalOcean's community content creators, the Navigators. \\
-    
-    Focus on the 4Cs of Advocacy:
+    Launched the Developer Relations program at Gretel as the first official hire. Defined DevRel's function within the company, established goals and  processes in alignment with the companies OKRs, and determined appropriate metrics to gauge DevRel's success. Built out Gretel's educational content program from the ground up, from pipelines to authored content. Established Gretel as an authoritative source in the greenfield space of synthetic data. \\
+
+    Focus on the 4Cs of Advocacy: 
 
     \begin{itemize}
-        \item \textit{Code} - Contributed to relevant open-source projects such as the DigitalOcean Terraform provider and DigitalOcean classroom. Created high-quality polyglot code samples to demonstrate DigitalOcean products and cloud architecture.
+        \item \textit{Code} - Contributed to relevant open-source projects such as the Gretel's sample code applications and built out CICD pipelines for publishing educational content.
     
-        \item \textit{Content} - Produced high-quality, high-performing educational resources about DigitalOcean products and open-source technologies in the form of tutorials, blogs, and videos.
+        \item \textit{Content} - Produced high-quality, high-performing educational resources about synthetic data, Gretel's products, and open-source technologies in the form of tutorials, blogs, and videos.
     
-        \item \textit{Community} - Engaged with developer communities at physical and virtual events. Presented workshops, webinars, and talks at universities, meetups, and conferences, both in-person and virtually. Active in social channels where developers congregate.
+        \item \textit{Community} - Engaged with developer communities at physical and virtual events. Presented workshops, webinars, and talks at universities, meetups, and conferences, both in-person and virtually. Active in social channels where developers congregate. Launched and moderated Gretel's community spaces on Slack and Discord.
         
-        \item \textit{Consulting} - Continuously aided non-technical employees at DigitalOcean in their programs, ensuring the consistency and accuracy of our developer voice. Brought relevant feedback from the community to multiple teams, including sales, marketing, and product.
+        \item \textit{Consulting} - Continuously aided non-technical employees at Gretel in their programs, ensuring the consistency and accuracy of our developer voice. Brought relevant feedback from the community to multiple teams, including sales, marketing, and product.
     \end{itemize}
 }
 
@@ -146,10 +145,12 @@ Community leader and advocate who loves teaching and helping people grow. Previo
 \section{Skills} 
 
 \begin{tabular}{rl}
-Developer Relations
+People
+& Team Building, Mentoring, Coaching, \\ 
+& People Management, Program Management \\
+Dev. Relations
 & Public Speaking, Technical Writing, \\
 & Evangelism, Developer Education, \\
-& Program Management \\
 Languages
 & Python, Golang, Java \\
 Frameworks
@@ -167,22 +168,21 @@ DevOps
 \section{Community \& Open Source}
 
 \begin{tabular}{ll}
-\textbf{\href{https://hacktoberfest.digitalocean.com/}{Hacktoberfest Organizer}}\\
-\tab Oraganizer for the largest Open Source program in the  \\
-\tab world. Lead the creation of the Advisory Council, and  \\
-\tab hosted official events \\
+\textbf{\href{https://hacktoberfest.digitalocean.com/}{Hacktoberfest  Advisory Council Member Organizer}}\\
+\tab Advisory member and past organizer for the largest  \\
+\tab open source program in the world. \\
 
 \textbf{\href{https://pytexas.org}{PyTexas}}\\
 \tab Organizer, Conference Chair for the oldest regional   \\
 \tab Python conference and largest Python event in Texas. \\
 
+\textbf{\href{https://pytexas.org}{PyTexas Foundation}}\\
+\tab President of the PyTexas Foundatin, a 501(c)(3) non-profit   \\
+\tab dedicated to expanding the use of Python in Texas \\
+
 \textbf{\href{https://www.digitalocean.com/community/users/masonegger?subtype=tutorial}{DigitalOcean Community Author}}\\
 \tab Authored multiple high performing tutorials on the  \\
 \tab famed DigitalOcean Community Tutorial site. \\
-
-\textbf{\href{https://www.digitalocean.com/community/pages/digitalocean-navigators}{DigitalOcean Navigator Program Lead}}\\
-\tab Program lead for DigitalOcean's most involved \\
-\tab community members. \\
 
 \textbf{\href{https://github.com/masonegger}{Open Source Contributor}}\\
 \tab Active Open Source contributor. \\
@@ -197,12 +197,12 @@ DevOps
 \begin{tabular}{ll}
 
 \textbf{\href{https://www.digitalocean.com/community/pages/cloud-chats}{Cloud Chats}} \\
-\tab Lead host on a weekly web show discussing news, \\
+\tab Past host on a weekly web show discussing news, \\
 \tab community, and developer topics.\\
 
-\textbf{\href{https://www.digitalocean.com/community/users/masonegger?subtype=tech_talk}{DigitalOcean Tech Talks}} \\
-\tab Monthly live coding streams on DevOps, \\
-\tab programming, and Cloud Architecture.\\
+\textbf{Tech Talks} \\
+\tab Perodical talks regarding different tech tools. \\
+\tab Performed at both DigitalOcean and Gretel\\
 
 \textbf{\href{https://mason.dev/speaking}{Conference Speaker}} \\
 \tab Highly sought after speaker, presented talks across \\ 
@@ -246,6 +246,14 @@ A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.
 %----------------------------------------------------------------------------------------
 %   Previous Work Experience
 %----------------------------------------------------------------------------------------
+{\raggedright\large Sr. Developer Advocate\\
+\small \textit{June 2021 - Present}\\
+\small \textit{DigitalOcean, Remote} \\
+\raggedright\small \textit{Developer Advocate: October 2019 - June 2021}\\[5pt]}
+
+\normalsize{
+    Responsible for fostering the growth, education, and satisfaction of the DigitalOcean developer community. Lead advocate for the Infrastructure as a Service-based products DigitalOcean, aiding in multiple Go-To-Market activities for new products. Involved in the planning and execution of DigitalOcean community events such as Deploy, Tech Talks, and Hacktoberfest. Lead the creation of an external, open-source focused Advisory Board to help guide the direction of Hacktoberfest. Contributed to relevant open-source projects such as the DigitalOcean Terraform provider and DigitalOcean classroom. Created high-quality polyglot code samples to demonstrate DigitalOcean products and cloud architecture. Implemented a company-wide educational series on all DigitalOcean products that is now a part of all new-hire onboarding. Organized, planned, and executed strategy as Program lead to expand and activate DigitalOcean's community content creators, the Navigators. \\
+}
 
 {\raggedright\large Sr. Software Engineer\\
 \small \textit{Jul 2019 - Sep 2019}\\
@@ -338,7 +346,6 @@ A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.
 \section{Miscellaneous} 
 
 \begin{tabular}{ll}
-YouTube Host \href{https://www.youtube.com/masonegger}{Mason Egger}\\
 Albums: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
 \end{tabular}\\
 
