adding PMA experience to resume

--- a/resume.tex
+++ b/resume.tex
@@ -147,10 +147,10 @@ Community leader and advocate who loves teaching and helping people grow. Previo
 \begin{tabular}{rl}
 People
 & Team Building, Mentoring, Coaching, \\ 
-& People Management, Program Management \\
+& Program Management, Community Engagement \\
 Dev. Relations
 & Public Speaking, Technical Writing, \\
-& Evangelism, Developer Education, \\
+& Evangelism, Developer Education \\
 Languages
 & Python, Golang, Java \\
 Frameworks
@@ -212,36 +212,11 @@ DevOps
 A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.dev/speaking}\\
 
 \end{tabular}\\
-
-
-
-%----------------------------------------------------------------------------------------
-%   Volunteer
-%----------------------------------------------------------------------------------------
-
-\section{Volunteer} 
-
-\begin{tabular}{ll}\
-\textbf{Microsoft TEALS}\\
-\tab\textit{2019-2020} - Classroom Enrichment Guest Lecturer\\
-\tab\textit{2018-2019} - Co-Teacher, AP Computer Science A\\
-\tab\tab\textit {IDEA Montopolis, High School}\\
-\\
-
-\textbf{Texas State University}\\
-\tab\textit{2015-present} - Guest Lecturer\\
-\tab\textit{2018-present} - Industrial Advisory Board Member\\
-\\
-
-\end{tabular}\\
-
-
-
     
 \end{minipage} % End right-hand side of the page
 \begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
 \vspace{0pt} % Trick for alignment
-\section{Prior Work Experience} 
+\section{Selected Work Experience} 
 
 %----------------------------------------------------------------------------------------
 %   Previous Work Experience
@@ -273,14 +248,8 @@ A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.
 
 \normalsize{Designed and implemented a Cloud-based platform for CI/CD and application deployment for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the codebase. Promoted multiple times within same team.}\\
 
-%------------------------------------------------
-% WORK EXPERIENCE 1
-%------------------------------------------------
-{\raggedright\large Undergraduate Instructional Assistant\\
-\small \textit{June 2012 - December 2015} \\
-\small \textit{Department of Computer Science, Texas State University}\\[5pt]}
 
-\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers and created automated solutions for departmental tasks.}\\
+A full accounting of my work experience can be found on my  \href{https://www.linkedin.com/in/mason-egger/}{LinkedIn}\\ 
 
 \end{minipage}
 \hfill
@@ -337,7 +306,30 @@ A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.
 
 \end{tabular}\\
 
+%----------------------------------------------------------------------------------------
+%   Volunteer
+%----------------------------------------------------------------------------------------
 
+\section{Volunteer} 
+
+\begin{tabular}{ll}\
+\textbf{Phi Mu Alpha Sinfonia Fraternity}\\
+\tab\textit{2022} - Deputy Province Governor\\
+\tab\tab\textit {Province 9, South Texas}\\
+\\
+
+\textbf{Microsoft TEALS}\\
+\tab\textit{2019-2020} - Classroom Enrichment Guest Lecturer\\
+\tab\textit{2018-2019} - Co-Teacher, AP Computer Science A\\
+\tab\tab\textit {IDEA Montopolis, High School}\\
+\\
+
+\textbf{Texas State University}\\
+\tab\textit{2015-present} - Guest Lecturer\\
+\tab\textit{2018-present} - Industrial Advisory Board Member\\
+\\
+
+\end{tabular}\\
 
 %----------------------------------------------------------------------------------------
 %   Miscellaneous
@@ -346,7 +338,7 @@ A full list of my talks can be found at \href{https://mason.dev/speaking}{mason.
 \section{Miscellaneous} 
 
 \begin{tabular}{ll}
-Albums: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
+Albums: \href{https://txstatetrombone.com/trombones-at-texas-state-university}{Trombones at Texas State}, \href{https://txstatetrombone.com/carol-of-the-bones}{Carol of the Bones} \\
 \end{tabular}\\
 
 \end{minipage}
