--- a/resume.tex
+++ b/resume.tex
@@ -85,7 +85,7 @@
 %   OBJECTIVE
 %----------------------------------------------------------------------------------------
 \section{About Me}
-Community leader and advocate who loves teaching and helping people grow. Previously worked in various engineering roles, both software and systems, with a penchant for security, automation, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open-source and building community.
+Community leader and advocate who loves teaching and helping people grow. Previously worked in various engineering roles, both software and systems, with a penchant for security, automation, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open-source and building community. \\
 
 %----------------------------------------------------------------------------------------
 %       Current WORK EXPERIENCE
@@ -102,7 +102,7 @@ Community leader and advocate who loves teaching and helping people grow. Previo
 \small \textit{Gretel.ai, Remote} \\}
 
 \normalsize{
-    Launched the Developer Relations program at Gretel as the first official hire. Defined DevRel's function within the company, established goals and  processes in alignment with the companies OKRs, and determined appropriate metrics to gauge DevRel's success. Built out Gretel's educational content program from the ground up, from pipelines to authored content. Established Gretel as an authoritative source in the greenfield space of synthetic data. \\
+    Launched the Developer Relations program at Grete0l as the first official hire. Defined DevRel's function within the company, established goals and  processes in alignment with the companies OKRs, and determined appropriate metrics to gauge DevRel's success. Developed technical educational content around Gretel use-cases, deployments, and synthetic data. Established the Synthetic Data Community Discord with Gretel as the primary sponsor. \\
 
     Focus on the 4Cs of Advocacy: 
 
@@ -147,18 +147,18 @@ Community leader and advocate who loves teaching and helping people grow. Previo
 \begin{tabular}{rl}
 People
 & Team Building, Mentoring, Coaching, \\ 
-& Program Management, Community Engagement \\
-Dev. Relations
-& Public Speaking, Technical Writing, \\
-& Evangelism, Developer Education \\
-Languages
-& Python, Golang, Java \\
-Frameworks
-& Django, Flask, Hugo \\
-DevOps
-& Terraform, Docker, Ansible,\\
-& Packer, CI/CD, Networking, \\
-& Cloud Architecture, Linux\\
+& Program Management, Community Engagement \\ \\
+Dev. Relations 
+& Public Speaking, Technical Writing, \\ 
+& Evangelism, Developer Education \\ \\
+Languages 
+& Python, Golang, Java \\ \\
+Frameworks 
+& Django, Flask, Hugo \\ \\
+DevOps 
+& Terraform, Docker, Ansible,\\ 
+& Packer, CI/CD, Networking, \\ 
+& Cloud Architecture, Linux\\ \\
 \end{tabular}
 
 
@@ -170,19 +170,23 @@ DevOps
 \begin{tabular}{ll}
 \textbf{\href{https://hacktoberfest.digitalocean.com/}{Hacktoberfest  Advisory Council Member Organizer}}\\
 \tab Advisory member and past organizer for the largest  \\
-\tab open source program in the world. \\
+\tab open source program in the world. \\ 
+\\
 
 \textbf{\href{https://pytexas.org}{PyTexas}}\\
 \tab Organizer, Conference Chair for the oldest regional   \\
 \tab Python conference and largest Python event in Texas. \\
+\\
 
 \textbf{\href{https://pytexas.org}{PyTexas Foundation}}\\
-\tab President of the PyTexas Foundatin, a 501(c)(3) non-profit   \\
+\tab President of the PyTexas Foundation, a 501(c)(3) non-profit   \\
 \tab dedicated to expanding the use of Python in Texas \\
+\\
 
 \textbf{\href{https://www.digitalocean.com/community/users/masonegger?subtype=tutorial}{DigitalOcean Community Author}}\\
 \tab Authored multiple high performing tutorials on the  \\
 \tab famed DigitalOcean Community Tutorial site. \\
+\\
 
 \textbf{\href{https://github.com/masonegger}{Open Source Contributor}}\\
 \tab Active Open Source contributor. \\
